Fixed a small issue related to image overflow

--- a/frontend/src/styles/components/_productImages.scss
+++ b/frontend/src/styles/components/_productImages.scss
@@ -25,6 +25,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 
     img { height: 100%; }
 
